fix: added tittle for gamemode selection, fixed cards border,  fixed centralization, fixed gamemode screen on mobile

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ main {
     width: 117px;
     height: 146px;
     perspective: 1000px;
-    border-radius: 5px;
+    flex-shrink: 0;
 }
 .card:hover {
     cursor: pointer;
@@ -73,6 +73,7 @@ main {
     transition: transform 0.8s;
 }
 .flip-card-front, .flip-card-back {
+    border-radius: 5px;
     position: absolute;
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -91,6 +92,7 @@ main {
 }
 .choosing-game-mode{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -102,9 +104,27 @@ main {
     left: 0px;
     z-index: 3;
 }
-.choosing-game-mode div{
+.choosing-game-mode h1 {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 66px;
+    letter-spacing: -0.004em;
+    color: #75B79E; 
+    margin-bottom: 50px;
+}
+.buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    
+}
+.buttons div{
     background-color: #A7E9AF;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     width: 200px;
@@ -112,6 +132,7 @@ main {
     margin-right: 50px;
     border: 3px solid white;
     flex-shrink: 0;
+    border-radius: 10px;
 
     font-family: 'Roboto', sans-serif;
     font-style: normal;
@@ -121,7 +142,7 @@ main {
     letter-spacing: -0.004em;
     color: #75B79E; 
 }
-.choosing-game-mode div:hover {
+.choosing-game-mode .buttons:hover {
     cursor: pointer;
 }
 .hidden {
@@ -133,5 +154,20 @@ main {
     header h1{
         font-size: 36px;
         line-height: 42px;
+    }
+    header p {
+        font-size: 20px;
+    }
+    main {
+        justify-content: center;
+    }
+    .buttons {
+        flex-direction: column; 
+    }
+    .buttons div {
+        margin-bottom: 50px;
+    }
+    .choosing-game-mode h1 {
+        text-align: center;
     }
 }
